Column header rename

--- a/DOWTank/Views/TankHistory/Index.cshtml
+++ b/DOWTank/Views/TankHistory/Index.cshtml
@@ -44,7 +44,39 @@
                             {
                             if (@col.ColumnName == "MajorLocationDS" || @col.ColumnName == "LocationDS" || @col.ColumnName == "LoadStatusTypeDS" || @col.ColumnName == "OwnerNM" || @col.ColumnName == "OperatorNM" || @col.ColumnName == "EquipmentTypeDS" || @col.ColumnName == "ServiceTypeDS" || @col.ColumnName == "TankCapacity" || @col.ColumnName == "TankLastTestDT" || @col.ColumnName == "TankNextTestDT" )
                            {
-                                <th>@col.ColumnName</th>
+                                switch(@col.ColumnName)
+                                    {
+                                        case "MajorLocationDS":
+                                            <th>Facility</th>
+                                            break;
+                                        case "LocationDS":
+                                            <th>Location</th>
+                                            break;
+                                        case "LoadStatusTypeDS":
+                                            <th>Status</th>
+                                            break;
+                                        case "OwnerNM":
+                                            <th>Owner</th>
+                                            break;  
+                                        case "OperatorNM":
+                                            <th>Operator</th>
+                                            break;
+                                        case "EquipmentTypeDS":
+                                            <th>Type</th>
+                                            break;  
+                                        case "ServiceTypeDS":
+                                            <th>Service</th>
+                                            break;
+                                        case "TankCapacity":
+                                            <th>Capacity</th>
+                                            break;  
+                                        case "TankLastTestDT":
+                                            <th>Last Test</th>
+                                            break;
+                                        case "TankNextTestDT":
+                                            <th>Test Due</th>
+                                            break;                                          
+                                    }
                                 }
                                 }
                            
@@ -75,8 +107,23 @@
                                 @foreach (DataColumn col in Model.DataTableEquipmentInfo.Columns)                           
                             {
                             if (@col.ColumnName == "LastProductDS" || @col.ColumnName == "BarrelConditionTypeDS" || @col.ColumnName == "TankGradeTypeDS" || @col.ColumnName == "LastContactNm")
-                           {
-                                <th>@col.ColumnName</th>
+                           {                               
+                                    switch(@col.ColumnName)
+                                    {
+                                        case "LastProductDS":
+                                            <th>Last Product</th>
+                                            break;
+                                        case "BarrelConditionTypeDS":
+                                            <th>Condition</th>
+                                            break;
+                                        case "TankGradeTypeDS":
+                                            <th>Grade</th>
+                                            break;
+                                        case "LastContactNm":
+                                            <th>Last Contact</th>
+                                            break;                                           
+                                    }
+
                                 }
                                 }
                            
@@ -219,7 +266,21 @@
                             {
                                 if (@col.ColumnName == "ChargeCodeAn" || @col.ColumnName == "OnHireDS" || @col.ColumnName == "StatusDt" ||@col.ColumnName == "OnHireReasonTypeDS")
                                 {
-                                    <th>@col.ColumnName</th>
+                                   switch(@col.ColumnName)
+                                    {
+                                        case "ChargeCodeAn":
+                                            <th>Charge/Shipment#</th>
+                                            break;
+                                        case "OnHireDS":
+                                            <th>On/Off Hire</th>
+                                            break;
+                                        case "StatusDt":
+                                            <th>Date</th>
+                                            break;
+                                        case "OnHireReasonTypeDS":
+                                            <th>Reason</th>
+                                            break;                                           
+                                    }
                                 }
                             }
                         </tr>
